feat: [QA-222] 홈 MVP 데이터 전용 BFF API 분리